modified for login passport authentication

--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -20,7 +20,7 @@
       <li><a ui-sref='auth.register'>Join</a>
       </li>
       <li class="divider-vertical"></li>
-      <li><a ui-sref='auth.login'>Log In</a>
+      <li><a ui-sref='members'>Log In</a>
       </li>
     </ul>
     <ul class="navbar-nav nav" data-ng-show="global.authenticated">
