Added new files

--- a/packages/system/server/views/includes/head.html
+++ b/packages/system/server/views/includes/head.html
@@ -17,6 +17,10 @@
   <meta property="og:site_name" content="MEAN - A Modern Stack">
   <meta property="fb:admins" content="APP_ADMIN">
 
+
+
+
+
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
 
   {% for file in aggregatedassets.header.css %}
@@ -34,5 +38,6 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="//cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
 
 </head>
