--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -19,6 +19,8 @@
     <ul class="navbar-nav nav" data-ng-hide="global.authenticated">
       <li><a ui-sref='auth.register'>Join</a>
       </li>
+      <li><a ui-sref='register'>Register</a>
+      </li>
       <li class="divider-vertical"></li>
       <li><a ui-sref='members'>Log In</a>
       </li>
