--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -1,5 +1,5 @@
 <section class="welcome container-fluid" data-ng-controller="IndexController">
-  <div class="col-md-12 first">
+ <!-- <div class="col-md-12 first">
     MEAN.io makes building apps simpler and faster. With this website framework, you can <a href="https://github.com/linnovate/mean/wiki/CLI#user-management">create members</a>, </br>
     articles, or <a href="http://mean.io/#!/packages">add more features</a> with a package from the community.
     </div>
@@ -100,5 +100,5 @@
         <span class="morelink"><a href="http://builtwith.mean.io">All Packages</a></span>
       </div>
     </div>
-  </div>
+  </div>-->
 </section>
