--- a/packages/users/public/views/index.html
+++ b/packages/users/public/views/index.html
@@ -1,3 +1,6 @@
+<div class="" ui-view></div>
+
+<!--
 <div class="form main-form" ng-controller="AuthCtrl" ng-class="{'register-form' : global.registerForm}">
     <div class="login-form__left" ui-view></div>
     <div class="login-form__center">
@@ -36,3 +39,4 @@
     </div>
 
 </div>
+-->
